<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_devices">Please connect product to start a party.</string>
    <string name="add_from_spotify">Add From Spotify</string>
    <string name="add_from_spotify_desc">Assign a playlist to One Touch Playback button</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_playlist_from_spotify_desc">You can add the currently playing music on your Spotify App to One Touch Playback. Max of 3 most recently played playlists will be shown here.</string>
    <string name="add_playlist_from_spotify_title">Add Playlist from Spotify</string>
    <string name="add_speakers">Add Speakers</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">JBL PartyBox</string>
    <string name="app_preference">App Preference</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_tones">Audio Tones</string>
    <string name="audio_tones_desc">You will hear a tone when activating or deactivating features</string>
    <string name="aur_add">Add</string>
    <string name="aur_add_new_speaker_tip">A new speaker can be added to the party at any time after it shows up as a Nearby speaker.</string>
    <string name="aur_add_speakers">Add speakers</string>
    <string name="aur_cant_find">Can’t find my speaker</string>
    <string name="aur_cant_find_speaker_tip">For non-PartyTogether products, you may check its own product control page for other multi-speaker connection methods.</string>
    <string name="aur_compatiable_models">Current PartyTogether [img] compatible models are:</string>
    <string name="aur_connect_start_party">Connect at least one product in ‘My Products’ list to start a party.</string>
    <string name="aur_connected">Connected</string>
    <string name="aur_connecting">Connecting...</string>
    <string name="aur_create_party">CREATE PARTY</string>
    <string name="aur_create_party_tip1">Wirelessly connect multiple speakers to create an instant party with synced-up music.</string>
    <string name="aur_create_party_tip2">Enjoy boosted sound in a single indoor space or an outdoor open area.</string>
    <string name="aur_daisy_chain_mode_tip">This speaker is in daisy chain mode. Please disconnect the daisy chain before using the PartyTogether function.</string>
    <string name="aur_discovering_product">Discovering product...</string>
    <string name="aur_dismiss">Dismiss</string>
    <string name="aur_got_it">GOT IT</string>
    <string name="aur_grant">GRANT</string>
    <string name="aur_grant_permission">Grant permission to discover nearby JBL products.</string>
    <string name="aur_how_create">How to create a party</string>
    <string name="aur_how_quit">How to quit a party</string>
    <string name="aur_how_remove">HOW TO REMOVE THIS SPEAKER?</string>
    <string name="aur_join_party_group">Join party as a group</string>
    <string name="aur_listening_others">You are listening from others.You can play music when the current playback stops.</string>
    <string name="aur_multiple_link_tip">PartyTogether allows you to link multiple speakers together to pump up your party.</string>
    <string name="aur_other_speakers">Other Speakers</string>
    <string name="aur_party_stereo">PartyTogether vs. Stereo</string>
    <string name="aur_party_together">PartyTogether</string>
    <string name="aur_party_together_tip">Under PartyTogether, all the speakers will play the same music in sync.</string>
    <string name="aur_play_music_tip">Play music on your speaker to start a party.</string>
    <string name="aur_playback_tip">Start music playback on any of the speakers.</string>
    <string name="aur_power_on_tip">Make sure the speakers are powered on.</string>
    <string name="aur_press_quit_party">Press [img] button on the speaker to quit the party.</string>
    <string name="aur_press_stop_listening">Press [img] button on the speaker to stop listening from the party.</string>
    <string name="aur_product_support">Product Support</string>
    <string name="aur_quit_app">Quit from app</string>
    <string name="aur_quit_app_tip">Tap on the icon of the speaker to be removed from the party and follow the on-screen instructions.</string>
    <string name="aur_quit_party">QUIT THE PARTY</string>
    <string name="aur_quit_product">Quit from product</string>
    <string name="aur_quit_product_tip">Press the PartyTogether button on the speaker to be removed from the party.</string>
    <string name="aur_sharing_music_tip">You are sharing music with other speakers at the party.</string>
    <string name="aur_stereo_group">Stereo group</string>
    <string name="aur_stereo_group_tip">Only two of the same speakers can be set up as stereo, one speaker will play the left channel and the other plays the right channel. You may set up this group through product control page.</string>
    <string name="aur_tap_join_party_tip">Tap on the speaker icon from the Nearby speaker list to join the party.</string>
    <string name="aur_ungroup_party_tips">If your speakers are setup as a stereo/ multi-channel audio system, please ungroup them first before they can join any party.</string>
    <string name="aur_update_version_tip">The speakers must be updated to the latest software to enjoy the feature.</string>
    <string name="aur_waiting">Waiting</string>
    <string name="auracast_welcome_tips">Tap nearby speakers to turn on TWS / Auracast feature remotely and group them to play music together</string>
    <string name="aux_source">Aux Source</string>
    <string name="back">BACK</string>
    <string name="bass">BASS</string>
    <string name="battery">Battery</string>
    <string name="begin_the_party">BEGIN THE PARTY</string>
    <string name="belongs_to_stereo_group">Belongs to stereo group</string>
    <string name="boost_the_party">BOOST THE PARTY</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="broadcaster_tips">You are listening from others.\nYou can play music when the current playback stops.</string>
    <string name="bt_source">Bluetooth Source</string>
    <string name="build_date">Build Date</string>
    <string name="by_jbl_official">By JBL Official</string>
    <string name="by_jbl_signature">JBL SIGNATURE</string>
    <string name="by_tigerlily">By Tigerlily</string>
    <string name="cannot_see_my_speakers">Cannot see my speakers</string>
    <string name="cant_find_another_speaker">Can\'t Find Another Speaker?</string>
    <string name="cant_find_speaker">Can’t find your speaker?</string>
    <string name="card_effect_lab">Effect \nLab</string>
    <string name="card_light_control">Light \nControl</string>
    <string name="channel_assignment">Channel Assignment</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_product_connection_guide">Choose a product from the below list to see the connection guide.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="res_0x7f110074_com_google_firebase_crashlytics_mapping_file_id">8602e1fa887b47af9a157c8b9973990e</string>
    <string name="res_0x7f110075_com_google_firebase_crashlytics_version_control_info" />
    <string name="com_spotify_sdk_login_progress">Loading…</string>
    <string name="compatible_speaker_list">Check compatible speaker list</string>
    <string name="placement">Placement</string>
    <string name="placement_content">Place two speakers side by side in front, facing towards you.</string>
    <string name="ptl_available">Available</string>
    <string name="ptl_back_light">Back light</string>
    <string name="ptl_back_light_desc">Enhance light effect by lighting up back side</string>
    <string name="ptl_brightness">Brightness</string>
    <string name="ptl_connect_partybox">Sync with PartyBox</string>
    <string name="ptl_dance_mode">Dance Mode</string>
    <string name="ptl_dance_mode_desc">Enhance the dynamic of the light effect</string>
    <string name="ptl_environment_sound">Follow the environment sound</string>
    <string name="ptl_light_controls">Light Controls</string>
    <string name="ptl_party_stage">PartyStage</string>
    <string name="ptl_party_together">PartyTogether</string>
    <string name="ptl_product_controls">Product Controls</string>
    <string name="ptl_product_info">Software version, Guide</string>
    <string name="ptl_product_info_title">Product Information</string>
    <string name="ptl_product_update">Product Update</string>
    <string name="ptl_sound_detection">Sound Detection</string>
    <string name="ptl_speed">Speed</string>
    <string name="ptl_stage_desc">Unleash vibrant and sequenced lights to your party with PartyBox</string>
    <string name="ptl_sync_light_effect">Lighting effects will be synchronised</string>
    <string name="str_find_speaker_sub_tips_1"> How to enter pairing mode? </string>
    <string name="str_find_speaker_tips_1">Make sure your speaker is paired with your device via Bluetooth.</string>
    <string name="str_find_speaker_tips_2">Pause the music on your speaker for a faster connection.</string>
    <string name="str_find_speaker_tips_3">Disconnect your speaker from other Bluetooth devices.</string>
    <string name="str_find_speaker_tips_4">Try restarting your speaker.</string>
    <string name="str_next">Next</string>
    <string name="tips_number_1">1.</string>
    <string name="tips_number_2">2.</string>
    <string name="tips_number_3">3.</string>
    <string name="tips_number_4">4.</string>
</resources>