<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_dashboard_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/dashboardTopBarContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/layout_partylight_app_bar"/>
    <com.harman.jbl.cd_biz_comm.widget.ElasticScrollView
        android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:overScrollMode="never"
        android:requiresFadingEdge="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardTopBarContainer">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layoutCardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp">
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/layoutGroupBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.harman.jbl.partylight.lib.dashboard.widget.PartyLightGroupCountView
                    android:id="@+id/groupCountView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/deviceImage"
                android:layout_width="@dimen/device_image_width"
                android:layout_height="@dimen/device_image_height"
                android:contentDescription="@null"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/cvUpdate"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:cardBackgroundColor="#92f1be"
                app:cardCornerRadius="@dimen/dimen_12dp"
                app:contentPaddingBottom="@dimen/dimen_10dp"
                app:contentPaddingLeft="@dimen/dimen_16dp"
                app:contentPaddingRight="@dimen/dimen_24dp"
                app:contentPaddingTop="@dimen/dimen_10dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivIcon"
                        android:layout_width="@dimen/dimen_72dp"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ptl_icon_update_widget"
                        android:adjustViewBounds="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:textSize="@dimen/font_12sp"
                        android:textStyle="bold"
                        android:textColor="@color/bg_regular"
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ptl_available"
                        app:layout_constraintBottom_toTopOf="@+id/tv2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"/>
                    <TextView
                        android:textSize="@dimen/font_18sp"
                        android:textStyle="bold"
                        android:textColor="@color/bg_regular"
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ptl_product_update"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv1"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tvPartyTogether"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/ptl_party_together"
                style="@style/PartyLightTheme.TitleText"/>
            <com.harman.jbl.partylight.lib.dashboard.widget.MenuPartyBoxSwitchView
                android:id="@+id/partyTogether"
                android:background="@drawable/ptl_menu_item_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:msv_desc="@string/ptl_sync_light_effect"
                app:msv_title="@string/ptl_connect_partybox"/>
            <com.harman.jbl.cd_biz_comm.widget.MatchWidthCardView
                android:id="@+id/setUpStage"
                android:background="@drawable/ptl_menu_item_bg"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:mw_desc="@string/ptl_stage_desc"
                app:mw_title="@string/ptl_party_stage"/>
            <com.harman.jbl.cd_biz_comm.widget.MenuSwitchView
                android:id="@+id/beamDanceMode"
                android:background="@drawable/ptl_menu_item_bg"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:msv_desc="@string/ptl_dance_mode_desc"
                app:msv_title="@string/ptl_dance_mode"/>
            <TextView
                android:textSize="@dimen/font_14sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/tvLightControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_36dp"
                android:text="@string/ptl_light_controls"
                android:fontFamily="@font/opensans_extrabold"/>
            <include
                android:id="@+id/layout_sync_note"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                layout="@layout/layout_widget_tips"/>
            <com.harman.jbl.partylight.lib.dashboard.widget.LightShowPanelView
                android:id="@+id/recycle_view_color_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:minHeight="@dimen/dimen_148dp"
                android:overScrollMode="never"/>
            <com.harman.jbl.partylight.lib.dashboard.widget.LightColorSelectView
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/radio_group_custom"
                android:background="@drawable/ptl_menu_item_bg"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:minHeight="@dimen/dimen_84dp"/>
            <com.harman.jbl.partylight.lib.dashboard.widget.MenuSliderView2
                android:id="@+id/speedControl"
                android:background="@drawable/ptl_menu_item_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:msv_leftIcon="@drawable/ptl_icon_partylight_speed_slow"
                app:msv_progressDrawable="@drawable/ptl_progressbar_partylight_speed"
                app:msv_rightIcon="@drawable/ptl_icon_partylight_speed_fast"
                app:msv_title="@string/ptl_speed"/>
            <com.harman.jbl.cd_biz_comm.widget.ForegroundMaskLayout
                android:id="@+id/fmlBrightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.harman.jbl.partylight.lib.dashboard.widget.MenuSliderView2
                    android:id="@+id/brightnessControl"
                    android:background="@drawable/ptl_menu_item_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    app:msv_leftIcon="@drawable/ptl_icon_partylight_brightness_dark"
                    app:msv_rightIcon="@drawable/ptl_icon_partylight_brightness_lightness"
                    app:msv_title="@string/ptl_brightness"/>
            </com.harman.jbl.cd_biz_comm.widget.ForegroundMaskLayout>
            <com.harman.jbl.cd_biz_comm.widget.MenuSwitchView
                android:id="@+id/soundDetection"
                android:background="@drawable/ptl_menu_item_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:msv_desc="@string/ptl_environment_sound"
                app:msv_title="@string/ptl_sound_detection"/>
            <com.harman.jbl.cd_biz_comm.widget.MenuSwitchView
                android:id="@+id/backLight"
                android:background="@drawable/ptl_menu_item_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:msv_desc="@string/ptl_back_light_desc"
                app:msv_title="@string/ptl_back_light"/>
            <TextView
                android:id="@+id/tvPartyControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_26dp"
                android:text="@string/ptl_product_controls"
                style="@style/PartyLightTheme.TitleText"/>
            <com.harman.jbl.cd_biz_comm.widget.MatchWidthCardView
                android:id="@+id/productInfo"
                android:background="@drawable/ptl_menu_item_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:mw_desc="@string/ptl_product_info"
                app:mw_title="@string/ptl_product_info_title"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/dimen_40dp"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:layout_marginBottom="@dimen/dimen_40dp"
                android:src="@drawable/ptl_ic_jbl_logo"
                android:scaleType="centerInside"
                android:contentDescription="@null"
                android:tintMode="src_in"
                app:tint="@color/shark"/>
        </LinearLayout>
    </com.harman.jbl.cd_biz_comm.widget.ElasticScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
