<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background"
    android:focusable="true"
    android:clickable="true"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/header_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/layout_app_subtitle_bar"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/sub_container"
        android:background="@drawable/bg_rounded_corner_low"
        android:paddingLeft="@dimen/dimen_12dp"
        android:paddingTop="@dimen/dimen_16dp"
        android:paddingRight="@dimen/dimen_12dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_18dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:paddingHorizontal="@dimen/dimen_12dp"
        android:paddingVertical="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/header_container"
        app:layout_constraintTop_toBottomOf="@+id/header_container">
        <ImageView
            android:id="@+id/compatible_speakers_icon"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:paddingVertical="@dimen/dimen_5dp"
            app:srcCompat="@drawable/ic_compatible_device"/>
        <TextView
            android:textSize="@dimen/font_16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/compatible_speakers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compatible_speaker_list"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginEnd="0dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:id="@+id/tips_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/tips_number_1"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintStart_toStartOf="@+id/header_container"
        app:layout_constraintTop_toBottomOf="@+id/sub_container"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:id="@+id/text_view_tips_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_find_speaker_tips_1"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tips_one"
        app:layout_constraintTop_toTopOf="@+id/tips_one"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/enter_pairing_mode"
        android:paddingTop="@dimen/dimen_5dp"
        android:paddingBottom="@dimen/dimen_5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_find_speaker_sub_tips_1"
        android:layout_marginEnd="@dimen/dimen_30dp"
        android:paddingVertical="@dimen/dimen_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_view_tips_one"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tips_one"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:id="@+id/tips_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/tips_number_2"
        android:layout_marginStart="@dimen/dimen_30dp"
        app:layout_constraintStart_toStartOf="@+id/header_container"
        app:layout_constraintTop_toBottomOf="@+id/enter_pairing_mode"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:id="@+id/text_view_tips_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_find_speaker_tips_2"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tips_two"
        app:layout_constraintTop_toTopOf="@+id/tips_two"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:id="@+id/tips_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/tips_number_3"
        android:layout_marginStart="@dimen/dimen_30dp"
        app:layout_constraintStart_toStartOf="@+id/header_container"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tips_two"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:id="@+id/text_view_tips_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_find_speaker_tips_3"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tips_three"
        app:layout_constraintTop_toTopOf="@+id/tips_three"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:id="@+id/tips_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/tips_number_4"
        android:layout_marginStart="@dimen/dimen_30dp"
        app:layout_constraintStart_toStartOf="@+id/header_container"
        app:layout_constraintTop_toBottomOf="@+id/text_view_tips_four"/>
    <TextView
        android:textSize="@dimen/font_16sp"
        android:textStyle="normal"
        android:textColor="@color/white_alpha_50"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_find_speaker_tips_4"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tips_four"
        app:layout_constraintTop_toTopOf="@+id/tips_four"/>
</androidx.constraintlayout.widget.ConstraintLayout>
