<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/layout_stereo_banner_placement_0"
    android:background="@drawable/bg_layout_raduis_24dp_outer_space"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.harman.jbl.partybox.ui.customviews.HmCustomFontTextView
        android:textSize="@dimen/font_18sp"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:gravity="start|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/placement"
        android:maxLines="1"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:fontFamily="@font/opensans_semibold"/>
    <com.harman.jbl.partybox.ui.customviews.HmCustomFontTextView
        android:textSize="@dimen/font_12sp"
        android:textColor="@color/white"
        android:gravity="start|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/placement_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:fontFamily="@font/opensans_regular"/>
    <com.harman.jbl.partybox.ui.customviews.HmCustomFontTextView
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_next"
        android:tag="binding_1"
        android:padding="@dimen/dimen_14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:minWidth="227dp"
        android:text="@string/str_next"
        android:fontFamily="@font/opensans_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textAllCaps="true"
        style="@style/partyPageButton"/>
</LinearLayout>
